--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,45 @@ pyrogram
 TgCrypto
 pyromod==1.5
 # --- For-Database ------------ #
-pymongo
 dnspython
 # --- For-Web-Response ------- #
 aiohttp
 pyrofork
+requests 
+bs4 
+shortzy 
+datetime 
+pytz 
+aiohttp
+requests
+jinja2
+apscheduler
+pyshorteners
+colorama
+NumPy 
+wheel 
+ujson 
+wget 
+pytz
+aiofiles
+hachoir
+python-decouple 
+ffmpeg
+youtube_search
+pymongo[srv]==3.12.3 
+motor==2.5.1 
+marshmallow==3.14.1 
+umongo==3.0.1 
+PyLeaves==1.0.2
+opencv-python-headless==4.7.0.68 
+googletrans==3.1.0a0 
+python-dotenv==0.21.1 
+gTTS==2.3.1 
+speedtest==0.0.1 
+humanize==4.6.0 
+Pillow==9.4.0 
+psutil==5.9.4 
+dnspython==2.3.0
+ffmpeg-python>=0.2.0
+pyromod==1.5
+git+https://github.com/Joelkb/cinemagoer
